--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,19 +9,47 @@
 
 @theme {
   --font-edo: "Edo", sans-serif;
-}
 
-:root {
-  --color-bg: #121212;
-  --color-text: #bdbdbd;
-  --color-red: #d32f2f;
-  --color-red-dark: #b71c1c;
-  --color-purple: #5e35b1;
+  --color-gray-50: oklch(97.61% 0 0);
+  --color-gray-100: oklch(89.14% 0 0);
+  --color-gray-200: oklch(82.03% 0 0);
+  --color-gray-300: oklch(74.12% 0 0);
+  --color-gray-400: oklch(66.65% 0 0);
+  --color-gray-500: oklch(58.97% 0 0);
+  --color-gray-600: oklch(51.03% 0 0);
+  --color-gray-700: oklch(42.02% 0 0);
+  --color-gray-800: oklch(33.29% 0 0);
+  --color-gray-900: oklch(23.93% 0 0);
+  --color-gray-950: oklch(18.22% 0 0);
+
+  --color-red-50: oklch(93.74% 0.025 17.61);
+  --color-red-100: oklch(87.79% 0.051 18.17);
+  --color-red-200: oklch(76.96% 0.104 19.71);
+  --color-red-300: oklch(66.61% 0.163 22.56);
+  --color-red-400: oklch(56.8% 0.2 26.41);
+  --color-red-500: oklch(50.16% 0.189 27.48);
+  --color-red-600: oklch(42.61% 0.158 27.28);
+  --color-red-700: oklch(35.22% 0.128 26.85);
+  --color-red-800: oklch(27.15% 0.094 26.21);
+  --color-red-900: oklch(17.47% 0.053 24.45);
+  --color-red-950: oklch(13% 0.033 22.76);
+
+  --color-purple-50: oklch(94.8% 0.019 302.2);
+  --color-purple-100: oklch(88.71% 0.042 300.73);
+  --color-purple-200: oklch(77.28% 0.087 299.65);
+  --color-purple-300: oklch(65.63% 0.135 298.31);
+  --color-purple-400: oklch(54.46% 0.18 295.42);
+  --color-purple-500: oklch(45.32% 0.185 292.63);
+  --color-purple-600: oklch(38.72% 0.154 293.09);
+  --color-purple-700: oklch(32.09% 0.122 293.17);
+  --color-purple-800: oklch(25.07% 0.089 294.79);
+  --color-purple-900: oklch(17.56% 0.048 296.47);
+  --color-purple-950: oklch(13.78% 0.032 296.56);
 }
 
 body {
-  background-color: var(--color-bg);
-  color: var(--color-text);
+  background-color: var(--color-gray-950);
+  color: var(--color-gray-50);
 }
 
 /* Neon text effects */
